# stock-return-predictor

./: README.md  pyproject.toml  requirements.txt  run.py
.pytest_cache/v/cache/: nodeids
src/stock_predictor/: backtest  cli  data  features  model  plotting
tests/: test_backtest  test_features
